sort.basic.cocktail.AlgCocktailSort3.scala.error
Erreur de compilation :
AlgCocktailSort3:9: error: not found: value getNombreValeur
    for(i<-b to getNombreValeur()-2-a){
                ^